--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 .Meiozin {
     background-image: url("img/GifBolinhocha.gif");
-    height: 500vh;
+    height: 700vh;
     width: 203.1vh;
     background-attachment: fixed;
     background-position: center;
@@ -97,43 +97,129 @@
     font-size: 6rem;
     margin-bottom:20px;
     position: relative;
-    top: 100px;
+    top: -1100px;
+    text-align: center;
 }
 
 .Meiozin2  h3 {
     font-size: 3.5rem;
     margin-bottom: 15px;
     position: relative;
-    top: 100px;
+    top: -1100px;
+    text-align: center;
 }
 .Meiozin2  p {
     font-size: 2rem;
     margin-bottom: 15px;
     position: relative;
-    top: 100px;
+    top: -1100px;
+    text-align: center;
 }
 .Meiozin2  img{
     position: relative;
-    top: 100px;
-    left: 100px;
+    top: -1100px;
 }
 
 .Min{
-    background-color: rgb(242, 175, 255);
-    background-attachment: fixed;
-    width: 100%;
-    height: 840px;
-}
-
-.Florzinha{
+    background-color: rgb(226, 133, 245);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1200px 300px;
     position: relative;
-    top: -810px;
-    left: 100px;
-    width: 570px;
+    top: -100px;
+    border-radius: 0px 0px 0px 0px;
 }
-
 
 /* --------------------------------------- Fecha Meio --------------------------------------*/
+
+
+
+
+
+/* --------------------------------------- Botão e Clicks ---------------------------------------- */
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+a:hover {
+    opacity: 1;
+}
+
+.btn {
+    background-color: rgb(36, 20, 3);
+    border-radius: 20px 50px 20px 50px;
+    color: #ececec;
+    padding: 20px 50px;
+    text-transform: uppercase;
+    position: relative;
+    top: -1080px;
+}
+
+/* --------------------------------------- Termina Botão e Clicks ---------------------------------------- */
+
+
+
+
+
+
+
+
+/* -------------------------------------------- section text --------------------------------------------------*/
+
+.conheca-o-hotel {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 600px 160px;
+    background-color: rgb(245, 193, 247);
+    top: -1900px;
+}
+
+.conheca-o-hotel h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    color: #221401;
+    text-align: unset;
+    position: relative;
+    top: -500px;
+
+}
+.conheca-o-hotel h3 {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    color: #221401;
+    text-align: center;
+    position: relative;
+    top: -500px;
+
+
+}
+
+.conheca-o-hotel p {
+    max-width: 800px;
+    margin-bottom: 20px;
+    color: #221401;
+    text-align: center;
+    position: relative;
+    top: -500px;
+
+}
+
+.conheca-o-hotel img{
+    position: relative;
+    top: -550px;
+
+
+}
+
+
+
+
 
 
 
@@ -179,51 +265,25 @@
 
 
 
-
-
-/* --------------------------------------- Botão e Clicks ---------------------------------------- */
-
- a {
-    text-decoration: none;
-    cursor: pointer;
-    opacity: 0.9;
-}
-
-a:hover {
-    opacity: 1;
-}
-
-.btn {
-    background-color: rgb(36, 20, 3);
-    border-radius: 20px 50px 20px 50px;
-    color: #ececec;
-    padding: 20px 50px;
-    text-transform: uppercase;
-    position: relative;
-    top: 200px;
-    left: -270px;
-}
-
-/* --------------------------------------- Termina Botão e Clicks ---------------------------------------- */
-
-
-
-
-
-
-
-
-
 /* ---------------------------------------- Medias --------------------------------*/
 @media (max-width: 700px) {
     .Meiozin h1 {
         font-size: 2.5rem;
     }
-    .Meiozin h3 {
-        margin-top: 10px;
+    .Meiozin h3 {   
+        margin-top: 10px;   
         font-size: 1.5rem;
     }
 }
+@media (max-width: 700px) {
+    header {
+        flex-direction: column;
+    }
+    header img {
+        margin-bottom: 15px;
+    }
+}
+
 /* --------------------------------- Termina Medias -------------------------------*/
 
 
