--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@
 .Meiozin2  img{
     position: relative;
     top: 0px;
+    border-radius: 50px;
 }
 
 .Min{
@@ -182,7 +183,7 @@ a:hover {
 }
 
 .Cardapio h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 20px;
     color: #221401;
     text-align: unset;
@@ -191,7 +192,7 @@ a:hover {
 
 }
 .Cardapio h3 {
-    font-size: 1.2rem;
+    font-size: 1.7rem;
     margin-bottom: 20px;
     color: #221401;
     text-align: center;
@@ -207,13 +208,13 @@ a:hover {
     text-align: center;
     position: relative;
     top: -500px;
-
+    font-size: 1.4rem;
 }
 
 .Cardapio img{
     position: relative;
     top: -550px;
-
+    border-radius: 50px;
 
 }
 
