--- a/duvidas.css
+++ b/duvidas.css
@@ -1,4 +1,4 @@
-/* ---------------------------------------- Area Todos -----------------------------------*/
+/* --------------------------------------------------------------- Area Todos -------------------------------------------------------------*/
 
 * {
     margin: 0;
@@ -17,13 +17,20 @@
         opacity: 1;
     }
 
-/* ----------------------------------- Fecha Area todos --------------------------------------*/
+/* ----------------------------------------------------------- Fecha Area todos ----------------------------------------------------------*/
 
 
 
 
 
-/* --------------------------------------- Fundinho e Parallax --------------------------------------*/
+
+
+
+
+
+
+
+/* ------------------------------------------------------- Fundinho e Parallax ------------------------------------------------------------*/
 
 .Meiozin {
     background-image: url("img/Duvidasgif.gif");
@@ -42,7 +49,7 @@
     }
 
 
-/* -------------------------------------- Fecha Fundinho e Parallax -------------------------------------------*/
+/* ----------------------------------------------------------- Fecha Fundinho e Parallax --------------------------------------------------------------*/
 
 
 
@@ -50,7 +57,16 @@
 
 
 
-/* ---------------------------------------------- Começa Header ----------------------------------------*/
+
+
+
+
+
+
+
+
+
+/* ------------------------------------------------------------------ Começa Header --------------------------------------------------------*/
 
 .Meiozin header {
     position: absolute;
@@ -95,7 +111,7 @@
     margin-right: 0;
 }
 
-/* ----------------------------------------------- fecha header ----------------------------------------- */
+/* --------------------------------------------------------------------- fecha header ------------------------------------------------------- */
 
 
 
@@ -108,11 +124,15 @@
 
 
 
-/* ------------------------------ Footer ------------------------------------*/
+
+
+
+
+/* ------------------------------------------------------ Footer -----------------------------------------------------------------*/
 footer{
     display: flex;
     flex-direction: column;
-    background-color: #510269;
+    background-color: #6b190e;
     padding: 50px 0;
     align-items: center;
     
@@ -140,4 +160,4 @@ footer p{
     text-align: center;
 }
 
-/* ---------------------------- Termina Footer ------------------------------------------ */
+/* --------------------------------------------------------- Termina Footer ----------------------------------------------------------------- */
