--- a/encomendar.css
+++ b/encomendar.css
@@ -1,4 +1,4 @@
-/* ---------------------------------------- Area Todos -----------------------------------*/
+/* ----------------------------------------------------------------- Area Todos ---------------------------------------------------------------*/
 
 * {
     margin: 0;
@@ -17,13 +17,19 @@
         opacity: 1;
     }
 
-/* ----------------------------------- Fecha Area todos --------------------------------------*/
+/* ------------------------------------------------------------------- Fecha Area todos ----------------------------------------------------------*/
 
 
 
 
 
-/* --------------------------------------- Fundinho e Parallax --------------------------------------*/
+
+
+
+
+
+
+/* -------------------------------------------------------------- Fundinho e Parallax ---------------------------------------------------------------------*/
 
 .Meiozin {
     background-image: url("img/PanquecaGif.gif");
@@ -42,7 +48,7 @@
     }
 
 
-/* -------------------------------------- Fecha Fundinho e Parallax -------------------------------------------*/
+/* ---------------------------------------------------------- Fecha Fundinho e Parallax ----------------------------------------------------------------*/
 
 
 
@@ -50,7 +56,11 @@
 
 
 
-/* ---------------------------------------------- Começa Header ----------------------------------------*/
+
+
+
+
+/* ------------------------------------------------------------------ Começa Header ----------------------------------------------------------------*/
 
 .Meiozin header {
     position: absolute;
@@ -94,7 +104,7 @@
     margin-right: 0;
 }
 
-/* ----------------------------------------------- fecha header ----------------------------------------- */
+/* ------------------------------------------------------------------- fecha header ---------------------------------------------------------- */
 
 
 
@@ -108,11 +118,12 @@
 
 
 
-/* ------------------------------ Footer ------------------------------------*/
+
+/* -------------------------------------------------------------- Footer -----------------------------------------------------------------*/
 footer{
     display: flex;
     flex-direction: column;
-    background-color: #510269;
+    background-color: #087d81;
     padding: 50px 0;
     align-items: center;
     
@@ -140,4 +151,4 @@ footer p{
     text-align: center;
 }
 
-/* ---------------------------- Termina Footer ------------------------------------------ */
+/* ----------------------------------------------------------- Termina Footer -------------------------------------------------------------- */
