--- a/style.css
+++ b/style.css
@@ -35,10 +35,7 @@
 /* -------------------------------------- Fecha Fundinho e Parallax -------------------------------------------*/
 
 
-
-
-
-
+/*------------------------------------- Slider --------------------------------------------*/
 
 /* ---------------------------------------------- Começa Header ----------------------------------------*/
 
@@ -177,9 +174,10 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 600px 600px;
+    padding: 600px 300px;
     background-color: rgb(245, 193, 247);
     top: 200px;
+    border-radius: 50px;
 }
 
 .Cardapio h1 {
@@ -215,7 +213,39 @@ a:hover {
     position: relative;
     top: -550px;
     border-radius: 50px;
+}
 
+.Cardapio .Comida{
+    position: relative;
+    top: 400px;
+    left: 00px;
+
+}
+.btn3{ 
+    background-color: rgb(63, 9, 70);
+border-radius: 20px 50px 20px 50px;
+color: #ececec;
+padding: 20px 50px;
+text-transform: uppercase;
+position: relative;
+top: -470px;
+}
+
+.Cardapio .bebida{
+    position: relative;
+    top: 700px;
+    right: 0px;
+
+}
+
+.btn4{
+    background-color: rgb(63, 9, 70);
+    border-radius: 20px 50px 20px 50px;
+    color: #ececec;
+    padding: 20px 50px;
+    text-transform: uppercase;
+    position: relative;
+    top: -470px;
 }
 
 
@@ -288,7 +318,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 050px 400px;
+    padding: 050px 500px;
     position: relative;
     top: 800px;
     border-radius: 50px;
