Falta só o responsivo, mas ta muito inctrivel ^^

--- a/duvidas.css
+++ b/duvidas.css
@@ -80,8 +80,11 @@
 .Meiozin header img {
     position: relative;
     max-width: 100%;
-    top: -20px;
+    top: 10px;
     left: 200px;
+    width: 200px;
+    height: 200px;
+    border-radius: 500px;
 }
 
 
